[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-cli"
version = "0.1.0"
description = "CLI client for the contract service (buy, run, withdraw)."
readme = "PACKAGE.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "You", email = "you@example.com" }]
keywords = ["contract", "cli", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.25",
    "python-dotenv>=0.19",
]

[project.scripts]
contract-cli = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
